--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,11 @@
+rootProject.name = 'okhttp-parent'
+
 include ':mockwebserver'
+if (!properties.containsKey('android.injected.invoked.from.ide') && System.getenv(
+        'ANDROID_SDK_ROOT') != null) {
+  // Currently incompatible with Intellij
+  include ':android-test'
+}
 include ':okcurl'
 include ':okhttp'
 include ':okhttp-brotli'
