--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
       'moshi': '1.8.0',
       'okio': '2.2.2',
       'ktlint': '0.31.0',
-      'picocli': '4.0.0-beta-1b'
+      'picocli': '4.0.1'
   ]
 
   ext.deps = [
