--- a/okcurl/reflect.config
+++ b/okcurl/reflect.config
@@ -1,14 +1,44 @@
 [
   {
     "name" : "okhttp3.curl.Main",
+    "allDeclaredConstructors" : true,
+    "allPublicConstructors" : true,
+    "allDeclaredMethods" : true,
+    "allPublicMethods" : true,
     "fields" : [
-      { "name" : "url", "allowWrite" : true },
-      { "name" : "showHttp2Frames", "allowWrite" : true },
-      { "name" : "data", "allowWrite" : true },
-      { "name" : "method", "allowWrite" : true }
-    ],
-    "methods" : [
-      { "name" : "<init>" }
+      { "name" : "allowInsecure" },
+      { "name" : "callTimeout" },
+      { "name" : "completionScript" },
+      { "name" : "connectTimeout" },
+      { "name" : "data" },
+      { "name" : "followRedirects" },
+      { "name" : "headers" },
+      { "name" : "method" },
+      { "name" : "readTimeout" },
+      { "name" : "referer" },
+      { "name" : "showHeaders" },
+      { "name" : "showHttp2Frames" },
+      { "name" : "url" },
+      { "name" : "userAgent" },
+      { "name" : "verbose" }
+    ]
+  },
+  {
+    "name" : "okhttp3.curl.Main$VersionProvider",
+    "allDeclaredConstructors" : true,
+    "allPublicConstructors" : true,
+    "allDeclaredMethods" : true,
+    "allPublicMethods" : true
+  },
+  {
+    "name" : "picocli.CommandLine$AutoHelpMixin",
+    "allDeclaredConstructors" : true,
+    "allPublicConstructors" : true,
+    "allDeclaredMethods" : true,
+    "allPublicMethods" : true,
+    "fields" : [
+      { "name" : "helpRequested" },
+      { "name" : "versionRequested" }
     ]
   }
 ]
