--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,9 @@ rootProject.name = 'okhttp-parent'
 
 include ':mockwebserver'
 
-if (properties.containsKey('android.injected.invoked.from.ide')) {
-  // Currently incompatible with Intellij, use with Android Studio
+if (properties.containsKey('android.injected.invoked.from.ide') || System.getenv(
+        'ANDROID_SDK_ROOT') != null) {
+  // Currently incompatible with Intellij, use with Android Studio and from CLI with explicit flag
   include ':android-test'
 }
 
