--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ dist: trusty
 jdk:
   - oraclejdk8
 
+# avoid ./gradlew assemble default which builds docs
+install:
+ - ./gradlew jar --parallel
+
 script:
- - ./gradlew check --parallel
+ - ./gradlew test --parallel
 
 after_success:
   - .buildscript/deploy_snapshot.sh
