--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,7 +200,8 @@ workflows:
       - testjdk8:
           filters:
             branches:
-              only: master
+              ignore:
+                - gh-pages
       - testjdk8alpn:
           filters:
             branches:
