--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,6 @@ buildscript {
 
 plugins {
   id 'ru.vyarus.animalsniffer' version '1.5.0'
-  id 'com.github.johnrengelman.shadow' version '4.0.1'
   id 'me.champeau.gradle.japicmp' version '0.2.6'
 }
 
@@ -189,8 +188,8 @@ subprojects { project ->
         includes = ['Module.md']
       }
       externalDocumentationLink {
-        url = new URL("https://square.github.io/okio/2.x/okio/jvm/index.html")
-        packageListUrl = new URL("https://square.github.io/okio/2.x/okio/jvm/package-list")
+        url = new URL("https://square.github.io/okio/2.x/okio/")
+        packageListUrl = new URL("https://square.github.io/okio/2.x/okio/package-list")
       }
     }
   }
