Prepare for release 4.1.0.

--- a/build.gradle
+++ b/build.gradle
@@ -189,8 +189,8 @@ subprojects { project ->
         includes = ['Module.md']
       }
       externalDocumentationLink {
-        url = new URL("https://square.github.io/okio/2.x/okio/jvm/index.html")
-        packageListUrl = new URL("https://square.github.io/okio/2.x/okio/jvm/package-list")
+        url = new URL("https://square.github.io/okio/2.x/okio/")
+        packageListUrl = new URL("https://square.github.io/okio/2.x/okio/package-list")
       }
     }
   }
