--- a/build.gradle
+++ b/build.gradle
@@ -148,10 +148,6 @@ subprojects { project ->
       dependencies {
         testImplementation "org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion"
       }
-      def alpnBootJar = configurations.testCompile.find { it.name.startsWith("alpn-boot-") }
-      test {
-        jvmArgs += "-Xbootclasspath/p:${alpnBootJar}"
-      }
     }
   } else if (platform == "conscrypt") {
     dependencies {
@@ -191,6 +187,19 @@ subprojects { project ->
       externalDocumentationLink {
         url = new URL("https://square.github.io/okio/2.x/okio/jvm/index.html")
         packageListUrl = new URL("https://square.github.io/okio/2.x/okio/jvm/package-list")
+      }
+    }
+
+    if (platform == "jdk8alpn") {
+      // Add alpn-boot on Java 8 so we can use HTTP/2 without a stable API.
+      def alpnBootVersion = alpnBootVersion()
+      if (alpnBootVersion != null) {
+        def alpnBootJar = configurations.testCompileClasspath.find {
+          it.name.startsWith("alpn-boot-")
+        }
+        test {
+          jvmArgs += "-Xbootclasspath/p:${alpnBootJar}"
+        }
       }
     }
   }
