--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,7 +204,8 @@ workflows:
       - testjdk8alpn:
           filters:
             branches:
-              only: master
+              ignore:
+                - gh-pages
       - testjdk11:
           filters:
             branches:
