--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ subprojects { project ->
     def alpnBootVersion = alpnBootVersion()
     if (alpnBootVersion != null) {
       dependencies {
-        testImplementation "org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion"
+        testCompile "org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion"
       }
       def alpnBootJar = configurations.testCompile.find { it.name.startsWith("alpn-boot-") }
       test {
