--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,8 +204,7 @@ workflows:
       - testjdk8alpn:
           filters:
             branches:
-              ignore:
-                - gh-pages
+              only: master
       - testjdk11:
           filters:
             branches:
