--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,6 +140,20 @@ jobs:
       - runtests:
           platform: jdk8alpn
 
+  testopenjsse:
+    docker:
+      - image: circleci/openjdk:8u171-jdk
+
+    environment:
+      JVM_OPTS: -Xmx1g
+      TERM: dumb
+
+    steps:
+      - checkout
+
+      - runtests:
+          platform: openjsse
+
   testjdk11:
     docker:
       - image: circleci/openjdk:11.0.3-jdk-stretch
@@ -205,6 +219,11 @@ workflows:
           filters:
             branches:
               only: master
+      - testopenjsse:
+          filters:
+            branches:
+              ignore:
+                - gh-pages
       - testjdk11:
           filters:
             branches:
@@ -234,6 +253,9 @@ workflows:
           requires:
             - compile
       - testjdk8alpn:
+          requires:
+            - compile
+      - testopenjsse:
           requires:
             - compile
       - testjdk11:
