Avoid running openjsse on each PR

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,8 +222,7 @@ workflows:
       - testopenjsse:
           filters:
             branches:
-              ignore:
-                - gh-pages
+              only: master
       - testjdk11:
           filters:
             branches:
