--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ jobs:
 
   testopenjsse:
     docker:
-      - image: circleci/openjdk:8u171-jdk
+      - image: circleci/openjdk:11.0.3-jdk-stretch
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -205,12 +205,12 @@ workflows:
           filters:
             branches:
               only: master
-      - checkjdk8:
-          filters:
-            branches:
-              ignore:
-                - master
-                - gh-pages
+#      - checkjdk8:
+#          filters:
+#            branches:
+#              ignore:
+#                - master
+#                - gh-pages
       - testjdk8:
           filters:
             branches:
@@ -222,12 +222,13 @@ workflows:
       - testopenjsse:
           filters:
             branches:
-              only: master
-      - testjdk11:
-          filters:
-            branches:
               ignore:
                 - gh-pages
+#      - testjdk11:
+#          filters:
+#            branches:
+#              ignore:
+#                - gh-pages
       - testjdk12:
           filters:
             branches:
