--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,6 +183,21 @@ jobs:
       - runtests:
           platform: jdk9
 
+  testjdk13:
+    docker:
+      # best source of JDK 13 for now?
+      - image: circleci/dynamodb:13-jdk
+
+    environment:
+      JVM_OPTS: -Xmx1g
+      TERM: dumb
+
+    steps:
+      - checkout
+
+      - runtests:
+          platform: jdk9
+
   testconscrypt:
     docker:
       - image: circleci/openjdk:11.0.3-jdk-stretch
@@ -226,12 +241,15 @@ workflows:
       - testjdk11:
           filters:
             branches:
-              ignore:
-                - gh-pages
+              only: master
       - testjdk12:
           filters:
             branches:
               only: master
+      - testjdk12:
+          filters:
+            ignore:
+              - gh-pages
       - testconscrypt:
           filters:
             branches:
