--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,8 +214,7 @@ workflows:
       - testjdk8:
           filters:
             branches:
-              ignore:
-                - gh-pages
+              only: master
       - testjdk8alpn:
           filters:
             branches:
@@ -232,8 +231,7 @@ workflows:
       - testjdk12:
           filters:
             branches:
-              ignore:
-                - gh-pages
+              only: master
       - testconscrypt:
           filters:
             branches:
