--- a/okhttp-testing-support/build.gradle
+++ b/okhttp-testing-support/build.gradle
@@ -3,7 +3,7 @@ dependencies {
   api deps.junit
   api deps.assertj
   api deps.conscrypt
-//  api deps.openjsse
+  api deps.openjsse
   
   compileOnly deps.jsr305
 }
