Experiment with JDK9 API usage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,9 +208,7 @@ workflows:
       - checkjdk8:
           filters:
             branches:
-              ignore:
-                - master
-                - gh-pages
+              only: master
       - testjdk8:
           filters:
             branches:
