--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -29,7 +29,7 @@ dependencies {
   compileOnly deps.openjsse
   compileOnly deps.jsr305
   compileOnly deps.animalSniffer
-  compileOnly files('/Users/yuri/Library/Android/sdk/platforms/android-29/android.jar')
+  implementation project(':okhttp-futureapi')
 
   testImplementation project(':okhttp-testing-support')
   testImplementation project(':okhttp-tls')
