--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include ':okcurl'
 include ':okhttp'
 include ':okhttp-brotli'
 include ':okhttp-dnsoverhttps'
+include ':okhttp-futureapi'
 include ':okhttp-hpacktests'
 include ':okhttp-logging-interceptor'
 include ':okhttp-sse'
