--- a/samples/unixdomainsockets/pom.xml
+++ b/samples/unixdomainsockets/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3.sample</groupId>
     <artifactId>sample-parent</artifactId>
-    <version>3.12.5-SNAPSHOT</version>
+    <version>3.12.5</version>
   </parent>
 
   <artifactId>unixdomainsockets</artifactId>
