--- a/okhttp-apache/pom.xml
+++ b/okhttp-apache/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>parent</artifactId>
-    <version>3.12.5</version>
+    <version>3.12.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>okhttp-apache</artifactId>
