DoH Android test

--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
   implementation project(':okhttp')
   testImplementation 'junit:junit:4.12'
   androidTestImplementation(project(':okhttp-testing-support')) {
@@ -37,6 +38,8 @@ dependencies {
   }
   androidTestImplementation project(':mockwebserver')
   androidTestImplementation project(':okhttp-tls')
+  androidTestImplementation project(':okhttp-dnsoverhttps')
+  androidTestImplementation project(':okhttp-logging-interceptor')
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   androidTestImplementation 'com.squareup.moshi:moshi:1.8.0'
