--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -50,6 +50,10 @@ afterEvaluate { project ->
   }
 }
 
+animalsniffer {
+    ignore 'javax.net.ssl.SSLParameters', 'javax.net.ssl.SSLSocket'
+}
+
 task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   oldClasspath = files(baselineJar(project, baselineVersion))
   newClasspath = files(jar.archivePath)
