--- a/samples/slack/pom.xml
+++ b/samples/slack/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3.sample</groupId>
     <artifactId>sample-parent</artifactId>
-    <version>3.12.6</version>
+    <version>3.12.7-SNAPSHOT</version>
   </parent>
 
   <artifactId>slack</artifactId>
