--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,7 @@ include ':okhttp-tls'
 include ':okhttp-urlconnection'
 include ':samples:crawler'
 include ':samples:guide'
+include ':samples:jmh'
 include ':samples:simple-client'
 include ':samples:slack'
 include ':samples:static-server'
