--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,8 +259,7 @@ workflows:
       - testcorretto:
           filters:
             branches:
-              ignore:
-                - gh-pages
+              only: master
   nightly:
     triggers:
       - schedule:
