--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
       'brotli': '0.1.2',
       'checkstyle': '8.15',
       'conscrypt': '2.2.1',
+      'corretto': '1.1.1',
       'findbugs': '3.0.2',
       'guava': '27.0.1-jre',
       'java': '1.8',
@@ -30,6 +31,7 @@ buildscript {
       'bouncycastle': "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}",
       'brotli': "org.brotli:dec:${versions.brotli}",
       'conscrypt': "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}",
+      'corretto': "software.amazon.cryptools:AmazonCorrettoCryptoProvider:${versions.corretto}:linux-x86_64",
       'guava': "com.google.guava:guava:${versions.guava}",
       'jnrUnixsocket': "com.github.jnr:jnr-unixsocket:${versions.jnrUnixsocket}",
       'jsoup': "org.jsoup:jsoup:${versions.jsoup}",
