Run JDK8 on commit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,7 +234,8 @@ workflows:
       - testjdk8:
           filters:
             branches:
-              only: master
+              ignore:
+                - gh-pages
       - testjdk8alpn:
           filters:
             branches:
