Testing fix/workaround for missingPongsFailsConnection with JDK12

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,7 +251,8 @@ workflows:
       - testjdk12:
           filters:
             branches:
-              only: master
+              ignore:
+                - gh-pages
       - testconscrypt:
           filters:
             branches:
