JDK 13 and Gradle 6 (#5561)
* JDK 13 and Gradle 6 RC 1

* Wrong JDK

* Passes test on JDK 13

* Fix

* Spotless upgrade

* Update gradle-wrapper.properties

* Gradle 6

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,6 +189,20 @@ jobs:
       - runtests:
           platform: jdk9
 
+  testjdk13:
+    docker:
+      - image: circleci/openjdk:13.0.1-jdk-buster
+
+    environment:
+      JVM_OPTS: -Xmx1g
+      TERM: dumb
+
+    steps:
+      - checkout
+
+      - runtests:
+          platform: jdk9
+
   testconscrypt:
     docker:
       - image: circleci/openjdk:11.0.5-jdk-stretch
@@ -253,6 +267,11 @@ workflows:
           filters:
             branches:
               only: master
+      - testjdk13:
+          filters:
+            branches:
+              ignore:
+                - gh-pages
       - testconscrypt:
           filters:
             branches:
@@ -286,6 +305,9 @@ workflows:
           requires:
             - compile
       - testjdk12:
+          requires:
+            - compile
+      - testjdk13:
           requires:
             - compile
       - testconscrypt:
