Interceptor for huge responses rejection (#5599)
Converted interceptor code to Kotlin (#5599)

Updated okhttp-sizelimiting-interceptor readme, fixed codestyle issues, added license notice

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include ':okhttp-brotli'
 include ':okhttp-dnsoverhttps'
 include ':okhttp-hpacktests'
 include ':okhttp-logging-interceptor'
+include ':okhttp-sizelimiting-interceptor'
 include ':okhttp-sse'
 include ':okhttp-testing-support'
 include ':okhttp-tls'
