--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,10 @@ env:
     - secure: "WMkcWrsvzJNf48w7DJwipUNbhAoggCkC+NM31esq9/GDceGtVWj4hssQETynG4+ckxr0wGqUxsTRTz0uGhX6Fi58haG8yKp+g/HVClqI5EYjI44ptPcwlqlbYjuGbk65k1OGGZLctA6fQA3uT0zee05/yBjJx/jOqrN+PD1tW38="
 
 branches:
-  only:
-    - master
+  except:
+    - gh-pages
+#  only:
+#    - master
 
 notifications:
   email: false
