Run Corretto only on specific PR branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ workflows:
       - testcorretto:
           filters:
             branches:
-              only: master
+              only: /.*corretto.*/
   nightly:
     triggers:
       - schedule:
