--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ workflows:
       - testcorretto:
           filters:
             branches:
-              only: /^*corretto*/
+              only: yschimke:corretto
   nightly:
     triggers:
       - schedule:
