Declare platform property to affect gradle build cache key

--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,12 @@ subprojects { project ->
     testLogging {
       exceptionFormat = 'full'
     }
+
+    println(platform)
+    println(platform)
+    println(platform)
+    println(platform)
+    systemProperty 'okhttp.platform', platform
   }
 
   if (platform == "jdk8alpn") {
