Declare platform property to affect gradle build caching (#5661)
* Declare platform property to affect gradle build cache key

* Fix

--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,8 @@ subprojects { project ->
     testLogging {
       exceptionFormat = 'full'
     }
+
+    systemProperty 'okhttp.platform', platform
   }
 
   if (platform == "jdk8alpn") {
