--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
   implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
+  implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
   implementation project(':okhttp')
   testImplementation 'junit:junit:4.12'
   androidTestImplementation(project(':okhttp-testing-support')) {
