--- a/samples/guide/pom.xml
+++ b/samples/guide/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3.sample</groupId>
     <artifactId>sample-parent</artifactId>
-    <version>3.14.5</version>
+    <version>3.14.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>guide</artifactId>
