Add basic bouncy castle test

--- a/okhttp-testing-support/build.gradle
+++ b/okhttp-testing-support/build.gradle
@@ -2,6 +2,8 @@ dependencies {
   api project(':okhttp')
   api deps.junit
   api deps.assertj
+  api deps.bouncycastle
+  api deps.bouncycastletls
   api deps.conscrypt
   api deps.corretto
   api deps.openjsse
