--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
   ext.versions = [
       'animalSniffer': '1.17',
       'assertj': '3.11.0',
-      'bouncycastle': '1.62',
+      'bouncycastle': '1.64',
       'brotli': '0.1.2',
       'checkstyle': '8.15',
       'conscrypt': '2.2.1',
@@ -29,6 +29,7 @@ buildscript {
       'animalSniffer': "org.codehaus.mojo:animal-sniffer-annotations:${versions.animalSniffer}",
       'assertj': "org.assertj:assertj-core:${versions.assertj}",
       'bouncycastle': "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}",
+      'bouncycastletls': "org.bouncycastle:bctls-jdk15on:${versions.bouncycastle}",
       'brotli': "org.brotli:dec:${versions.brotli}",
       'conscrypt': "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}",
       'corretto': "software.amazon.cryptools:AmazonCorrettoCryptoProvider:${versions.corretto}:linux-x86_64",
