--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -1,4 +1,3 @@
-apply plugin: 'com.vanniktech.maven.publish'
 apply plugin: 'me.champeau.gradle.japicmp'
 
 jar {
@@ -18,7 +17,7 @@ compileKotlin {
 task copyJavaTemplates(type: Copy) {
   from 'src/main/java-templates'
   into "$buildDir/generated/sources/java-templates/java/main"
-  expand('projectVersion': "$VERSION_NAME")
+  expand('projectVersion': "${project.version}")
   filteringCharset = 'UTF-8'
 }
 
