--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ buildscript {
       'android': "org.robolectric:android-all:9-robolectric-4913185-2",
       'animalSniffer': "org.codehaus.mojo:animal-sniffer-annotations:${versions.animalSniffer}",
       'assertj': "org.assertj:assertj-core:${versions.assertj}",
-      'bouncycastle': "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}",
+      'bouncycastle': "org.bouncycastle:bcprov-debug-jdk15on:${versions.bouncycastle}",
+      'bouncycastlepkix': "org.bouncycastle:bcpkix-jdk15on:${versions.bouncycastle}",
       'bouncycastletls': "org.bouncycastle:bctls-jdk15on:${versions.bouncycastle}",
       'brotli': "org.brotli:dec:${versions.brotli}",
       'conscrypt': "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}",
