--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -26,6 +26,10 @@ dependencies {
   api deps.okio
   api deps.kotlinStdlib
   compileOnly deps.android
+  compileOnly deps.bouncycastle
+  implementation deps.bouncycastletls, {
+    exclude module:"bcprov-jdk15on"
+  }
   compileOnly deps.conscrypt
   compileOnly deps.openjsse
   compileOnly deps.jsr305
